# cli-optiga-trust-m

./: .gitignore  .gitmodules  CMakeLists.txt
linux_example/: simpleTest_Server.c  trustm_cert.c  trustm_data.c  trustm_ecc_keygen.c  trustm_ecc_sign.c  trustm_metadata.c  trustm_monotonic_counter.c  trustm_rsa_dec.c  trustm_rsa_keygen.c  trustm_rsa_sign.c
trustm_engine/: trustm_engine.c  trustm_engine_common.h  trustm_engine_rsa.c
trustm_helper/: trustm_helper.c
